# qt5-study

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/01_Intro/: CMakeLists.txt
apps/01_Intro/src/: 01_Intro.cpp
apps/BlockingFortuneClientExample/: CMakeLists.txt
apps/BlockingFortuneClientExample/src/: BlockingFortuneClientExample.cpp
apps/BroadcastReceiverExample/: CMakeLists.txt
apps/BroadcastReceiverExample/src/: BroadcastReceiverExample.cpp
apps/Dock_Widgets_Sample/: CMakeLists.txt
apps/Dock_Widgets_Sample/src/: Dock_Widgets_Sample.cpp
apps/FortuneServerExample/: CMakeLists.txt
apps/FortuneServerExample/src/: FortuneServerExample.cpp
apps/SaveStream_Design_Test/: CMakeLists.txt
apps/SaveStream_Design_Test/src/: SaveStream_Design_Test.cpp
apps/Text_Editor_Sample/: CMakeLists.txt
apps/Text_Editor_Sample/src/: Text_Editor_Sample.cpp
modules/: CMakeLists.txt
modules/BlockingClient/: CMakeLists.txt
modules/BlockingClient/include/Hvr/BlockingFortuneClient/: BlockingClient.h  FortuneThread.h
modules/BlockingClient/src/: BlockingClient.cpp  FortuneThread.cpp
modules/FortuneServer/: CMakeLists.txt
modules/FortuneServer/include/Hvr/FortuneServer/: Server.h
modules/FortuneServer/src/: Server.cpp
modules/MainWindow/: CMakeLists.txt
modules/MainWindow/include/Hvr/MainWindow/: MainWindow.h
modules/MainWindow/src/: MainWindow.cpp
modules/MainWindow_Dock_Widgets/: CMakeLists.txt
modules/MainWindow_Dock_Widgets/include/Hvr/MainWindow_Dock_Widgets/: MainWindow_Dock_Widgets.h
modules/MainWindow_Dock_Widgets/src/: MainWindow_Dock_Widgets.cpp
modules/MainWindow_TXT_Editor/: CMakeLists.txt
modules/MainWindow_TXT_Editor/include/Hvr/MainWindow_TXT_Editor/: MainWindow_TXT_Editor.h
modules/MainWindow_TXT_Editor/src/: MainWindow_TXT_Editor.cpp
modules/Receiver/: CMakeLists.txt
modules/Receiver/include/Hvr/BroadcastReceiver/: Receiver.h
modules/Receiver/src/: Receiver.cpp
modules/SaveStream_UI/: CMakeLists.txt
modules/SaveStream_UI/include/Hvr/SaveStream_UI/: BlinkBG.h  MainWindow.h  StatusPanel.h
modules/SaveStream_UI/src/: BlinkBG.cpp  MainWindow.cpp  StatusPanel.cpp
unit-test/: CMakeLists.txt  gtest.txt
